# cloth_point_cloud_segmentation

./: .gitmodules  README.md
cloth_segmentation/: CMakeLists.txt  package.xml
cloth_segmentation/config/: params.yaml  yolo_cloth.yaml
cloth_segmentation/launch/: cloth_segmentation.launch  yolov4.launch
cloth_segmentation/rviz/: layout.rviz
cloth_segmentation/src/: cloth_segmentation.cpp
cloth_segmentation/yolo_network_config/cfg/: yolo_cloth.cfg
