<?xml version="1.0"?>
<package format="2">
  <name>cloth_segmentation</name>
  <version>0.0.0</version>
  <description>The cloth_segmentation package</description>

  <maintainer email="miguel@todo.todo">miguel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <exec_depend>libpcl-all</exec_depend>
  <build_depend>libpcl-all-dev</build_depend>

</package>
